--- a/Monopoly.UserField/Views/Field.xaml
+++ b/Monopoly.UserField/Views/Field.xaml
@@ -130,6 +130,11 @@
                         Style="{StaticResource commonButtonStyle}">
                 </Button>
             </Grid>
+            <Button Command="{Binding TradeCommand}"
+                        Content="Trade"
+                        x:Name="TradeButton"
+                        Style="{StaticResource relativeButtonStyle}">
+            </Button>
         </StackPanel>
     </DockPanel>
 
