--- a/Monopoly/Dialogs/BuyOrAuctionDialog/BuyOrAuctionDialog.xaml
+++ b/Monopoly/Dialogs/BuyOrAuctionDialog/BuyOrAuctionDialog.xaml
@@ -1,22 +1,22 @@
-﻿<dialogs:CustomDialog x:Class="Monopoly.Dialogs.AuctionDialog"
+﻿<dialogs:CustomDialog x:Class="Monopoly.Dialogs.BuyOrAuctionDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:local="clr-namespace:Monopoly.Dialogs"
-             mc:Ignorable="d" 
              xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-             xmlns:helpers="clr-namespace:Monopoly.Model.Helpers;assembly=Monopoly.Model"
+             xmlns:sharedHelpers="clr-namespace:Monopoly.Model.Helpers;assembly=Monopoly.Model" 
+             mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
     <dialogs:CustomDialog.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\Styles\CardTemplates.xaml"/>
-                <ResourceDictionary Source="..\Styles\BetsTemplates.xaml"/>
+                <ResourceDictionary Source="..\..\Styles\CardTemplates.xaml"/>
                 <ResourceDictionary>
-                    <helpers:IntValueIncrementConverter x:Key="IntValueIncrementConverter"/>
+                    <sharedHelpers:CardTemplateSelector x:Key="CardTemplateSelector"
+                                                  TownCardTemplate="{StaticResource TownCardTemplate}"
+                                                  StationCardTemplate="{StaticResource StationCardTemplate}"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -91,93 +91,36 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <ContentPresenter Grid.Column="0" Content="{Binding Card}" ContentTemplate="{StaticResource TownCardTemplate}" Width="150" HorizontalAlignment="Left"/>
-                <Border Name="ActualHeightHelper" Grid.Column="1">
-                    <ListView ItemsSource="{Binding Bets}"
-                              BorderThickness="1"
-                              Height="{Binding ElementName=ActualHeightHelper, Path=ActualHeight}">
-                        <ListView.View>
-                            <GridView >
-                                <GridViewColumn Header="Player" CellTemplate="{StaticResource PlayersTemplate}" Width="200"/>
-                                <GridViewColumn Header="Bet" CellTemplate="{StaticResource BetsTemplate}" Width="200"/>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </Border>
-            </Grid>
+            <ContentPresenter Grid.Row="0" Content="{Binding Card}"
+                              Width="150" ContentTemplateSelector="{StaticResource CardTemplateSelector}"/>
 
             <Grid Grid.Row="1" MinHeight="150">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <DockPanel Width="250" Grid.Column="0" DataContext="{Binding Player}">
-                    <Image DockPanel.Dock="Left" Source="{Binding Avatar}" Width="70" Height="70"/>
-                    <StackPanel DockPanel.Dock="Left">
-                        <TextBlock Text="{Binding Nickname}" HorizontalAlignment="Center"/>
-                        <TextBlock HorizontalAlignment="Center">
-                            <TextBlock.Text>
-                                <Binding Path="Money">
-                                    <Binding.StringFormat>{0:C}</Binding.StringFormat>
-                                </Binding>
-                            </TextBlock.Text>
-                        </TextBlock>
-                    </StackPanel>
-                </DockPanel>
-                <Grid Grid.Column="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0"
-                               Text="{Binding ElementName=BetSlider, Path=Value, StringFormat=Your bet {0:C0}}"
-                               HorizontalAlignment="Center"/>
-                    <Slider Grid.Row="1"
-                            x:Name="BetSlider"
-                            Margin="4"
-                            Controls:SliderHelper.ChangeValueBy="LargeChange"
-                            Controls:SliderHelper.EnableMouseWheel="MouseHover"
-                            AutoToolTipPlacement="TopLeft"
-                            LargeChange="10"
-                            Maximum="{Binding Player.Money}"
-                            Minimum="{Binding LastBet, Converter={StaticResource IntValueIncrementConverter}, ConverterParameter=1}"
-                            Orientation="Horizontal"
-                            SmallChange="1"
-                            Value="{Binding CurrentSliderValue, NotifyOnSourceUpdated=True}"/>
-                </Grid>
-            </Grid>
-
-            <Grid Grid.Row="2" MinHeight="150">
-                <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" MinWidth="200" />
                     <ColumnDefinition Width="*" MinWidth="200" />
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="PlaceBetButton"
+                <Button x:Name="PART_BuyButton"
                             Grid.Column="0"
                             Height="75"
                             Margin="5 0"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Center"
-                            Command="{Binding PlaceBetCommand}"
-                            Content="Place a bet"
+                            Command="{Binding CloseCommand}"
+                            CommandParameter="{x:Static local:BuyOrAuctionDialogResults.BUY}"
+                            Content="Buy"
                             FontSize="30" />
-                <Button x:Name="LeaveButton"
+                <Button x:Name="PART_AuctionButton"
                             Grid.Column="1"
                             Height="75"
                             Margin="5 0"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Center"
-                            Command="{Binding LeaveCommand}"
-                            Content="Leave"
+                            Command="{Binding CloseCommand}"
+                            CommandParameter="{x:Static local:BuyOrAuctionDialogResults.AUCTION}"
+                            Content="Auction"
                             FontSize="30" />
             </Grid>
         </Grid>
