--- a/Monopoly/Styles/CardTemplates.xaml
+++ b/Monopoly/Styles/CardTemplates.xaml
@@ -62,17 +62,148 @@
                         </Style>
                     </Grid.Resources>
 
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="0" Grid.Column="0"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="0"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="1"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="0"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="1"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="2"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="0"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="1"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="2"/>
-                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="3"/>
-                    <iconPacks:PackIconFontAwesome Kind="BuildingRegular" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="0" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="3" Foreground="Black"/>
+                    <iconPacks:PackIconFontAwesome Kind="BuildingRegular" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black"/>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="0" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.House">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="1" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.TwoHouses">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="2" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.ThreeHouses">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="3" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.FourHouses">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="4" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.Hotel">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                </Grid>
+
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="PledgeCost">
+                            <Binding.StringFormat>Collateral cost {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="HouseCost">
+                            <Binding.StringFormat>House cost {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+            </StackPanel>
+        </Border>
+    </DataTemplate>
+
+    <DataTemplate x:Key="TownCardExchangeTemplate" DataType="{x:Type abstractModel:AbstractCard}">
+        <Border BorderBrush="Black" BorderThickness="1" Background="White" Margin="5">
+            <StackPanel Margin="5">
+                <Label Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}"
+                       Content="{Binding Name}" 
+                       FontSize="16" FontWeight="Black" Height="35">
+                </Label>
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="Cost">
+                            <Binding.StringFormat>Cost {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="TaxGroup.Empty">
+                            <Binding.StringFormat>Usual Rent {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="TaxGroup.Set">
+                            <Binding.StringFormat>Set Rent {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.Resources>
+                        <Style TargetType="{x:Type iconPacks:PackIconMaterial}">
+                            <Setter Property="Foreground" Value="Black"/>
+                        </Style>
+                    </Grid.Resources>
+
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="0" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="1" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="2" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconOcticons Kind="Home" Grid.Row="3" Grid.Column="3" Foreground="Black"/>
+                    <iconPacks:PackIconFontAwesome Kind="BuildingRegular" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"  Foreground="Black"/>
 
                     <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="0" Grid.Column="4">
                         <TextBlock.Text >
@@ -174,16 +305,110 @@
                         </Style>
                     </Grid.Resources>
 
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="0" Grid.Column="0"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="0"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="1"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="0"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="1"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="2"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="0"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="1"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="2"/>
-                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="3"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="0" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="3" Foreground="Black"/>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="0" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.Empty">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="1" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.Set">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="2" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.House">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                    <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="3" Grid.Column="4">
+                        <TextBlock.Text >
+                            <Binding Path="TaxGroup.TwoHouses">
+                                <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                            </Binding>
+                        </TextBlock.Text>
+                    </TextBlock>
+
+                </Grid>
+
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="PledgeCost">
+                            <Binding.StringFormat>Collateral cost {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+            </StackPanel>
+        </Border>
+    </DataTemplate>
+
+    <DataTemplate x:Key="StationCardExchangeTemplate" DataType="{x:Type abstractModel:AbstractCard}">
+        <Border BorderBrush="Black" BorderThickness="1" Background="White" Margin="5">
+            <StackPanel Margin="5">
+                <Label Content="{Binding Name}" 
+                       FontSize="16" FontWeight="Black" Height="35"
+                       Foreground="Black">
+                </Label>
+                <TextBlock HorizontalAlignment="Center"
+                           Foreground="Black">
+                    <TextBlock.Text >
+                        <Binding Path="Cost">
+                            <Binding.StringFormat>Cost {0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.Resources>
+                        <Style TargetType="{x:Type iconPacks:PackIconMaterial}">
+                            <Setter Property="Foreground" Value="Black"/>
+                        </Style>
+                    </Grid.Resources>
+
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="0" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="1" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="2" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="0" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="1" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="2" Foreground="Black"/>
+                    <iconPacks:PackIconModern Kind="Train" Grid.Row="3" Grid.Column="3" Foreground="Black"/>
 
                     <TextBlock HorizontalAlignment="Right" Foreground="Black" Grid.Row="0" Grid.Column="4">
                         <TextBlock.Text >
